--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,10 @@ body {
 hr {
     border: 1px solid #ccc;
 }
-ul {
+/* ul {
     list-style-type: none;
     padding-left: 0;
-}
+} */
 li {
     margin-bottom: 10px;
 }
